# foras

./: .gitattributes  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.js  build.ts  docker-compose.yml  egg.json  mod.ts  pack_wasm.ts  package-lock.json  package.json  patch.js  rollup.config.js  test.ts  tsconfig.json  wasm.ts
.github/workflows/: commit.yml  publish-to-nest.land.yml  release.yml
deno/mods/: mod.ts
example/deno/: mod.ts
example/node/: index.js  package-lock.json  package.json
node/mods/: index.ts
pkg/: README.md  deflate.d.ts  deflate.js  deflate_bg.d.ts  deflate_bg.wasm  denoflate.d.ts  denoflate.js  denoflate_bg.d.ts  denoflate_bg.wasm  denoflate_bg.wasm.js  package.json
src/: lib.rs
src/deno/: mod.test.ts  mod.ts
src/deno/mods/: mod.test.ts  mod.ts
src/node/: index.bench.ts  index.test.ts  index.ts
src/node/mods/: index.test.ts  index.ts
test/: lorem.txt
test/deno/: test.ts
test/node/: package.json  test.js
wasm/: Cargo.toml
wasm/pkg/: README.md  foras.d.ts  foras.js  foras.wasm.d.ts  foras.wasm.js  foras_bg.wasm  foras_bg.wasm.d.ts  package.json
wasm/src/: deflate.rs  gzip.rs  lib.rs  zlib.rs
wasm/src/deflate/: decoder.rs  encoder.rs
wasm/src/gzip/: decoder.rs  encoder.rs
wasm/src/zlib/: decoder.rs  encoder.rs
