[package]
name = "denoflate"
version = "0.1.0"
authors = ["hazae41 <hazae41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"
js-sys = "0.3"
flate2 = "1.0.16"
