[package]
name = "foras"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly port of Deflate, Gzip, and Zlib compression algorithms"
repository = "https://github.com/hazae41/foras-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.87", default-features = false, features = ["std"] }
flate2 = { version = "1.0.25", default-features = false }
